@@ -1,3 +1,10 @@
+Mon May 21 22:22:01 2001  Andrew Lanoix <alanoix@umich.edu>
+
+	*udp.c: gnet_udp_socket_new_interface() use 
+	GNET_CLOSE_SOCKET instead of close()
+
+	*conn.h: #include<memory.h>
+
 Sun May 20 22:32:19 2001  David Helder  <dhelder@umich.edu>
 
 	* debian/*: Clean ups for 1.1
